[tool.poetry]
name = "faisalahmedresume"
version = "0.1.0"
description = "This git repo has been created to create a digital resume in github."
authors = ["Faisal Ahmed <faisalg2006@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
